--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.17",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1",
     "xlsx": "^0.18.5",
