--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,14 @@
+# Backend virtual environments
+venv/
+backend/venv/
+.backend/.env
+
+# Python cache
+__pycache__/
+*.py[cod]
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,20 +16,21 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Node modules & build outputs
+node_modules/
+dist/
+dist-ssr/
+
+# Local environment files
 *.local
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-backend/venv/
